fix: remove gap in labelWrapper of ToggleButton component

--- a/src/once-ui/components/ToggleButton.module.scss
+++ b/src/once-ui/components/ToggleButton.module.scss
@@ -37,7 +37,6 @@
 .labelWrapper {
     display: flex;
     align-items: center;
-    gap: 1px;
     max-width: 100%;
 }
 
